--- a/src/components/Task.css
+++ b/src/components/Task.css
@@ -1,10 +1,22 @@
 .task-container {
+  align-items: center;
   background-color: #444;
+  border-radius: 5px;
+  color: #eee;
+  display: flex;
+  justify-content: space-between;
   margin: 8px 0;
   padding: 15px 20px;
-  display: flex;
-  border-radius: 5px;
-  justify-content: space-between;
-  color: #eee;
-  align-items: center;
+}
+
+.task-title {
+  cursor: pointer;
+}
+
+.remove-task-button {
+  background-color: #444;
+  border: none;
+  color: chartreuse;
+  cursor: pointer;
+  font-size: 24px;
 }
