--- a/src/components/Task.css
+++ b/src/components/Task.css
@@ -13,10 +13,17 @@
   cursor: pointer;
 }
 
-.remove-task-button {
+.buttons-container {
+  display: flex;
+  justify-content: flex-end;
+  width: 30%;
+}
+
+.remove-task-button, .see-task-details-button {
   background-color: #444;
   border: none;
   color: chartreuse;
   cursor: pointer;
   font-size: 24px;
+  margin: 0 5px;
 }
